# Diff-Utility

./: .gitignore  LICENSE  PR_BODY.txt  README.md  RELEASE_NOTES.md  build_exe.py  coverage.json  plan_cli_args.md  pyproject.toml  requirements-dev.txt  requirements.txt  review-report.md  run_ci_locally.py
.github/agents/: Claudette.agent.md  Clive.agent.md  Georgina.agent.md  Steve.agent.md  Tracy.agent.md
.github/workflows/: ci.yml  release-latest.yml  release-version.yml
Documentation/: CODING_STANDARDS.md
Documentation/Active-Plans/: Clive-Review-Diff-Utility.md  Handoff-Claudette-Diff-Utility.md  Handoff-Clive-Implementation-Complete.md  Handoff-Tracy-Diff-Utility.md
Documentation/Records/: PR-20-REVIEW.md  handoff_claudette_to_clive.md  handoff_implementation.md  plan_cli_args.md  review_clive_release_revamp.md
Documentation/implementation-summaries/: 2025-12-11-claudette-revision.md  2025-12-11-clive.md
Documentation/planning/archive/: Diff-Utility-Plan.md  diff-enhancement-code-review.md  diff-enhancement-plan.md
scripts/: check_branch_coverage.py
src/diff_utility/: __init__.py  cli.py  diff.py  diff_engine.py  greeter.py
src/template/: __init__.py
tests/performance/: test_large_files.py
tests/unit/: test_check_branch_coverage.py
tests/unit/diff_utility/: test_cli.py  test_diff.py  test_diff_engine.py  test_greeter.py
tests/unit/template/: test_greeter.py
